# skill-sysml

./: .gitignore  .mcp.json  CHANGELOG.md  INSTALL.md  LICENSE  NOTICE.md  README.md  SHIP-READINESS.md  pyproject.toml  test.json  test.sysml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  oob-marketplace-test.yml
evals/: evals.json  test_library_index.py  test_vulnerability.py
evals/fixtures/: broken_vehicle.sysml
mcp-server/: cli.py  library_index.py  server.py  setup.sh
mcp-server/java/: SysmlValidatorServer.java
mcp-server/java/org/omg/sysml/util/traversal/facade/impl/: SafeJsonFacade.java
skills/sysml-copilot/: SKILL.md
skills/sysml-copilot/agents/: openai.yaml
skills/sysml-copilot/references/: sysml-syntax.md
tests/: test_mcp_startup.py
